--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "Fantasy Stock Trading Application",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1", 
-    "client": "npm run watch --prefix client", 
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "client": "npm run watch --prefix client",
     "dev": "concurrently \"nodemon sever.js\" \"npm run client\""
   },
   "author": "Dan Murphy",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "react-bootstrap": "^1.4.3"
   }
 }
