--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "scripts": {
     "test": "jest",
     "client": "npm run watch --prefix client",
-    "dev": "concurrently \"nodemon sever.js\" \"npm run client\""
+    "dev": "concurrently \"nodemon sever.js\" \"npm run client\"",
+    "heroku-postbuild": "npm i --prefix client && npm run build --prefix client"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/danielmurphy1/fanstasystockapp.git"
   },
   "author": "Dan Murphy",
   "license": "ISC",
