--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   "scripts": {
     "test": "jest",
     "client": "npm run watch --prefix client",
-    "dev": "concurrently \"nodemon sever.js\" \"npm run client\"", 
-    "heroku-prebuild": "npm i --prefix client && npm run build --prefix client",
-    "heroku-postbuild": "echo This runs afterwards."
+    "dev": "concurrently \"nodemon sever.js\" \"npm run client\""
   },
   "repository": {
     "type": "git",
