--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "jest",
     "client": "npm run watch --prefix client",
-    "dev": "concurrently \"nodemon sever.js\" \"npm run client\""
+    "dev": "concurrently \"nodemon sever.js\" \"npm run client\"",
+    "heroku-postbuild": "npm i --prefix client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
