--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "scripts": {
     "test": "jest",
     "client": "npm run watch --prefix client",
-    "dev": "concurrently \"nodemon sever.js\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client" 
+    "dev": "concurrently \"nodemon sever.js\" \"npm run client\""
   },
   "repository": {
     "type": "git",
