--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.0",
-    "boostrap": "^2.0.0",
+    "bootstrap": "^5.3.0",
     "cra-build-watch": "^3.4.0",
     "react": "^17.0.1",
     "react-bootstrap": "^2.8.0",
