--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "jest",
-    "client": "npm run watch --prefix client",
+    "client": "npm start --prefix client",
     "dev": "concurrently \"nodemon sever.js\" \"npm run client\""
   },
   "repository": {
